--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.11.5",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.2",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
