--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "i18next": "^23.11.5",
     "next": "^14.2.3",
+    "next-intl": "^3.15.2",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
