--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18next": "^23.11.5",
     "next": "^14.2.3",
     "next-intl": "^3.15.2",
+    "next-video": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.2",
