--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,17 @@ videos/*
 !videos/*.js
 !videos/*.ts
 public/_next-video
+
+# next-video
+ /*
+! /*.json
+! /*.js
+! /*.ts
+public/_next-video
+
+# next-video
+videos/*
+!videos/*.json
+!videos/*.js
+!videos/*.ts
+public/_next-video
