--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev & npx next-video sync -w",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "i18next": "^23.11.5",
     "next": "^14.2.3",
-    "next-intl": "^3.15.2",
-    "next-video": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.2",
     "react-player": "^2.16.0",
     "swiper": "^11.1.1"
   },
